--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
   <h2>Oreo Milkshake</h2>
   <img src="./images/Oreo milkshake.jpg" alt="Oreo Milkshake" />
   <p style="width: 50%">
-   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maiores illo
-   consequatur reiciendis incidunt eligendi mollitia tempora aut, animi nobis
-   debitis, quam ex ipsum molestiae a quos quod temporibus voluptatem quisquam.
-   Aut quae nesciunt dolores, deserunt provident, at nulla repellat nemo
-   obcaecati, illum eius eaque ipsam itaque repudiandae aperiam iusto delectus.
+   zhdigksjgodjgldmlsfl Lorem ipsum dolor, sit amet consectetur adipisicing
+   elit. Maiores illo consequatur reiciendis incidunt eligendi mollitia tempora
+   aut, animi nobis debitis, quam ex ipsum molestiae a quos quod temporibus
+   voluptatem quisquam. Aut quae nesciunt dolores, deserunt provident, at nulla
+   repellat nemo obcaecati, illum eius eaque ipsam itaque repudiandae aperiam
+   iusto delectus.
   </p>
   <h3><a href="https://www.wikipedia.org/" target="_blank">Details</a></h3>
   <br />
